--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_KEY=http://localhost:8080
+VITE_API_KEY=https://devapi-tms.mind-graph360.com
+# http://localhost:8080
 # https://devapi-tms.mind-graph360.com
