--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_API_KEY=https://devapi-tms.mind-graph360.com
 # http://localhost:8080
 # https://devapi-tms.mind-graph360.com
+
+VITE_API_KEY=https://devapi-tms.mind-graph360.com
