--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.9.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "moment": "^2.30.1",
@@ -68,6 +69,7 @@
     "three": "^0.169.0",
     "tms-update": "file:",
     "vaul": "^1.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
