--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-VITE_API_KEY=https://devapi-tms.mind-graph360.com
+VITE_API_KEY=http://localhost:8080
+# https://p031c201-8080.inc1.devtunnels.ms
+ 
 # http://localhost:8080
 # https://devapi-tms.mind-graph360.com
 
-VITE_API_KEY=https://devapi-tms.mind-graph360.com
+# VITE_API_KEY=https://devapi-tms.mind-graph360.com
