--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-VITE_API_KEY=https://devapi-tms.mind-graph360.com
+VITE_API_KEY= https://2kr6qb32-8080.inc1.devtunnels.ms
 # http://localhost:8080
 # https://devapi-tms.mind-graph360.com
 
-VITE_API_KEY=https://devapi-tms.mind-graph360.com
