--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_KEY= https://2kr6qb32-8080.inc1.devtunnels.ms
+VITE_API_KEY= http://localhost:8080
 #https://devapi-tms.mind-graph360.com
 # http://localhost:8080
 
